Add minimal Globalization.

--- a/BlazorInputMoney/BlazorInputMoney.csproj
+++ b/BlazorInputMoney/BlazorInputMoney.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="CultureWithName.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Lib\" />
+  </ItemGroup>
+
 </Project>
